# rust-cli-template

./: .gitignore  Cargo.toml  README.md  README.template.md  init.sh
.github/workflows/: releases.yml
src/: config.rs  main.rs
src/commands/: hello.rs  mod.rs
template/: Cargo.toml  LICENSE  README.md  cargo-generate.toml  cliff.toml  cliff.toml.liquid  include.gitignore
template/.github/workflows/: releases.yml  releases.yml.liquid
template/.rhai/filters/: year.rhai
template/.rhai/hooks/: post.rhai
template/src/: config.rs  main.rs
